--- a/about.html
+++ b/about.html
@@ -18,7 +18,6 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
@@ -37,7 +36,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="roster.html">Roster</a>
@@ -46,36 +45,27 @@
         </div>
       </div>
     </header>
+
     <main class="container py-5">
-      <h1 class="text-center mb-4">
-        Welcome to the Golden State Warriors Team Roster Showcase
-      </h1>
-      <p class="lead text-center">
-        Explore the team, meet the players, and learn more about your favorite
-        Warriors!
+      <h1 class="text-center mb-4">About the Team</h1>
+      <p class="lead">
+        The Golden State Warriors are one of the most iconic franchises in NBA
+        history. Based in San Francisco, California, the team has claimed
+        multiple championships in the modern era, driven by a culture of
+        excellence, teamwork, and innovation.
       </p>
-      <div class="text-center mt-5">
-        <a href="roster.html" class="btn btn-warning btn-lg"
-          >View Team Roster</a
-        >
-      </div>
+      <p>
+        The Warriors have revolutionized the game with their three-point
+        shooting and fast-paced playstyle, led by superstar Stephen Curry. Known
+        for developing talent and fostering team chemistry, the Warriors
+        continue to be a dominant force in the league.
+      </p>
     </main>
+
     <footer>
       <!-- place footer here -->
     </footer>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/players.js"></script>
-    <script src="js/roster.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
