--- a/roster.html
+++ b/roster.html
@@ -18,7 +18,6 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
@@ -40,41 +39,49 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="roster.html">Roster</a>
+              <a class="nav-link active" href="roster.html">Roster</a>
             </li>
           </ul>
         </div>
       </div>
     </header>
+
     <main class="container py-5">
-      <h1 class="text-center mb-4">
-        Welcome to the Golden State Warriors Team Roster Showcase
-      </h1>
-      <p class="lead text-center">
-        Explore the team, meet the players, and learn more about your favorite
-        Warriors!
-      </p>
-      <div class="text-center mt-5">
-        <a href="roster.html" class="btn btn-warning btn-lg"
-          >View Team Roster</a
-        >
-      </div>
+      <h1 class="text-center mb-4">Team Roster</h1>
+      <div id="rosterGrid" class="row g-4"></div>
     </main>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="playerModal"
+      tabindex="-1"
+      aria-labelledby="playerModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content shadow">
+          <div class="modal-header">
+            <h5 class="modal-title" id="playerModalLabel">Player Detail</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body" id="modalBody">
+            <!-- Player detail goes here -->
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer>
       <!-- place footer here -->
     </footer>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/players.js"></script>
     <script src="js/roster.js"></script>
   </body>
