--- a/roster.html
+++ b/roster.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Team Roster</title>
-    <!-- Required meta tags -->
+    <title>Roster | Warriors Elite</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
-    <!-- Bootstrap CSS v5.2.1 -->
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <!-- Tailwind CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,70 +27,269 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Warriors Showcase</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="roster.html">Roster</a>
-            </li>
-          </ul>
+    <header class="relative">
+      <nav
+        class="navbar navbar-expand-lg bg-warriors-navy fixed top-0 w-full z-50 shadow-xl transition-all duration-300"
+      >
+        <div class="container mx-auto px-4">
+          <a
+            class="navbar-brand text-gold font-poppins font-extrabold text-2xl flex items-center"
+            href="index.html"
+          >
+            <i class="fas fa-basketball-ball mr-3 text-3xl"></i>Warriors Elite
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto space-x-4">
+              <li class="nav-item">
+                <a
+                  class="nav-link text-gold hover:text-white font-semibold transition-colors"
+                  href="index.html"
+                  ><i class="fas fa-home mr-1"></i>Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-gold hover:text-white font-semibold transition-colors"
+                  href="about.html"
+                  ><i class="fas fa-info-circle mr-1"></i>About</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-gold hover:text-white font-semibold transition-colors active"
+                  href="roster.html"
+                  ><i class="fas fa-users mr-1"></i>Roster</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="bg-warriors-navy text-white py-24 text-center">
+        <div class="container mx-auto px-4">
+          <h1 class="text-5xl font-poppins font-extrabold mb-4 animate-fade-in">
+            Our Roster
+          </h1>
+          <p class="text-xl">
+            Meet the elite athletes of the 2025 Warriors squad
+          </p>
         </div>
       </div>
     </header>
-
-    <main class="container py-5">
-      <h1 class="text-center mb-4">Team Roster</h1>
-      <div id="rosterGrid" class="row g-4"></div>
-    </main>
-
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="playerModal"
-      tabindex="-1"
-      aria-labelledby="playerModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content shadow">
-          <div class="modal-header">
-            <h5 class="modal-title" id="playerModalLabel">Player Detail</h5>
+    <main class="container mx-auto py-16 px-4">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
+        <div class="md:col-span-2">
+          <h2 class="text-3xl font-poppins font-bold text-warriors-navy mb-4">
+            The Warriors Lineup
+          </h2>
+          <p class="text-lg text-gray-700">
+            Discover the players who make the Golden State Warriors a
+            powerhouse. Filter or search to explore their unique talents.
+          </p>
+        </div>
+        <div class="flex items-center justify-center md:justify-end">
+          <div class="btn-group" role="group" aria-label="Filter buttons">
             <button
               type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body" id="modalBody">
-            <!-- Player detail goes here -->
+              class="btn border-warriors-navy text-warriors-navy px-4 py-2 rounded-l-full active"
+              id="all-players"
+            >
+              All Players
+            </button>
+            <button
+              type="button"
+              class="btn border-warriors-navy text-warriors-navy px-4 py-2 rounded-r-full"
+              id="star-players"
+            >
+              Star Players
+            </button>
           </div>
         </div>
       </div>
-    </div>
-
-    <footer>
-      <!-- place footer here -->
+      <div class="mb-8">
+        <input
+          type="text"
+          id="searchInput"
+          class="form-control rounded-full px-4 py-3 shadow-md focus:ring-gold focus:border-gold"
+          placeholder="Search by player name..."
+        />
+      </div>
+      <div class="bg-white shadow-2xl rounded-2xl p-8 mb-8">
+        <div class="flex flex-col md:flex-row justify-between items-center">
+          <h5 class="font-poppins font-bold text-warriors-navy mb-4 md:mb-0">
+            <i class="fas fa-info-circle text-gold mr-2"></i>2025 Team Stats
+          </h5>
+          <div class="flex space-x-8">
+            <div class="text-center">
+              <h4
+                class="text-3xl font-bold text-warriors-navy counter"
+                data-target="45"
+              >
+                0
+              </h4>
+              <p class="text-gray-600">Wins</p>
+            </div>
+            <div class="text-center">
+              <h4
+                class="text-3xl font-bold text-warriors-navy counter"
+                data-target="15"
+              >
+                0
+              </h4>
+              <p class="text-gray-600">Losses</p>
+            </div>
+            <div class="text-center">
+              <h4
+                class="text-3xl font-bold text-warriors-navy counter"
+                data-target="75"
+              >
+                0
+              </h4>
+              <p class="text-gray-600">Win %</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        id="rosterGrid"
+        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8"
+      ></div>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="playerModal"
+        tabindex="-1"
+        aria-labelledby="playerModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content rounded-2xl shadow-xl">
+            <div
+              class="modal-header bg-gradient-to-r from-warriors-navy to-gold text-white"
+            >
+              <h5
+                class="modal-title font-poppins font-bold"
+                id="playerModalLabel"
+              >
+                Player Details
+              </h5>
+              <button
+                type="button"
+                class="btn-close btn-close-white"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body p-8" id="playerModalBody"></div>
+            <div class="modal-footer border-t-0">
+              <button
+                type="button"
+                class="btn border-warriors-navy text-warriors-navy rounded-full hover:bg-warriors-navy hover:text-white"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="bg-gray-900 text-white py-12">
+      <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
+        <div>
+          <h5 class="font-poppins font-bold text-lg mb-4">
+            <i class="fas fa-basketball-ball mr-2"></i>Warriors Elite
+          </h5>
+          <p class="text-gray-400">
+            Dominating the NBA with skill and heart in 2025.
+          </p>
+        </div>
+        <div>
+          <h5 class="font-poppins font-bold text-lg mb-4">Quick Links</h5>
+          <ul class="list-none space-y-2">
+            <li>
+              <a href="index.html" class="text-gray-400 hover:text-gold"
+                ><i class="fas fa-chevron-right mr-2"></i>Home</a
+              >
+            </li>
+            <li>
+              <a href="about.html" class="text-gray-400 hover:text-gold"
+                ><i class="fas fa-chevron-right mr-2"></i>About</a
+              >
+            </li>
+            <li>
+              <a href="roster.html" class="text-gray-400 hover:text-gold"
+                ><i class="fas fa-chevron-right mr-2"></i>Roster</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h5 class="font-poppins font-bold text-lg mb-4">Follow Us</h5>
+          <div class="flex space-x-4">
+            <a href="#" class="text-gray-400 hover:text-gold text-xl"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="#" class="text-gray-400 hover:text-gold text-xl"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a href="#" class="text-gray-400 hover:text-gold text-xl"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="#" class="text-gray-400 hover:text-gold text-xl"
+              ><i class="fab fa-youtube"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+      <hr class="my-8 border-gray-700" />
+      <div class="text-center text-gray-400">
+        © 2025 Warriors Elite Roster Showcase | All Rights Reserved
+      </div>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/players.js"></script>
-    <script src="js/roster.js"></script>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Counter Animation Script -->
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const counters = document.querySelectorAll(".counter");
+        counters.forEach((counter) => {
+          const updateCounter = () => {
+            const target = +counter.getAttribute("data-target");
+            const count = +counter.innerText;
+            const increment = target / 100;
+            if (count < target) {
+              counter.innerText = Math.ceil(count + increment);
+              setTimeout(updateCounter, 20);
+            } else {
+              counter.innerText = target;
+            }
+          };
+          updateCounter();
+        });
+      });
+    </script>
+    <script src="players.js"></script>
+    <script src="roster.js"></script>
   </body>
 </html>
