--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                   class="card-flip-front bg-white shadow-xl rounded-2xl overflow-hidden"
                 >
                   <img
-                    src="https://images.pexels.com/photos/11761424/pexels-photo-11761424.jpeg?auto=compress&cs=tinysrgb&w=800"
+                    src="https://cdn.nba.com/headshots/nba/latest/1040x760/201939.png"
                     alt="Stephen Curry"
                     class="w-full h-64 object-cover"
                   />
@@ -290,7 +290,7 @@
                   class="card-flip-front bg-white shadow-xl rounded-2xl overflow-hidden"
                 >
                   <img
-                    src="https://images.pexels.com/photos/22523147/pexels-photo-22523147/free-photo-of-basketball-player-dribbling.jpeg?auto=compress&cs=tinysrgb&w=800"
+                    src="https://cdn.nba.com/headshots/nba/latest/1040x760/202691.png"
                     alt="Klay Thompson"
                     class="w-full h-64 object-cover"
                   />
@@ -320,7 +320,7 @@
                   class="card-flip-front bg-white shadow-xl rounded-2xl overflow-hidden"
                 >
                   <img
-                    src="https://images.pexels.com/photos/3689680/pexels-photo-3689680.jpeg?auto=compress&cs=tinysrgb&w=800"
+                    src="https://cdn.nba.com/headshots/nba/latest/1040x760/203110.png"
                     alt="Draymond Green"
                     class="w-full h-64 object-cover"
                   />
