update player objects with current roster and expanded details

--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@
           <div class="flex justify-center space-x-4">
             <span
               class="badge bg-gold text-warriors-navy px-4 py-2 rounded-full"
-              ><i class="fas fa-trophy mr-1"></i>8-Time NBA Champions</span
+              ><i class="fas fa-trophy mr-1"></i>7-Time NBA Champions</span
             >
             <span
-              class="badge bg-white text-warriors-navy px-4 py-2 rounded-full"
-              ><i class="fas fa-medal mr-1"></i>2025 Conference Leaders</span
+              class="badge bg-blue-600 text-warriors-navy px-4 py-2 rounded-full"
             >
+              <i class="fas fa-medal mr-1"></i>2025 Conference Leaders
+            </span>
           </div>
         </div>
       </div>
@@ -451,7 +452,7 @@
         });
       });
     </script>
-    <script src="players.js"></script>
-    <script src="roster.js"></script>
+    <script src="js/players.js"></script>
+    <script src="js/roster.js"></script>
   </body>
 </html>
