refine styling for navbar links, card animations, and hover effects

--- a/about.html
+++ b/about.html
@@ -76,7 +76,10 @@
           </div>
         </div>
       </nav>
-      <div class="bg-warriors-navy text-white py-24 text-center">
+      <div
+        style="background-color: #1c386f"
+        class="text-white py-24 text-center"
+      >
         <div class="container mx-auto px-4">
           <h1 class="text-5xl font-poppins font-extrabold mb-4 animate-fade-in">
             Our Legacy
