--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Golden State Warriors</title>
+    <title>Warriors Elite</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -121,13 +121,13 @@
               <div class="flex space-x-4">
                 <a
                   href="roster.html"
-                  class="btn bg-warriors-navy text-white px-6 py-3 rounded-full hover:bg-gold hover:text-warriors-navy transition-all"
+                  class="btn bg-warriors-navy text-white px-6 py-3 rounded-full hover:scale-105 transition-transform"
                 >
                   <i class="fas fa-users mr-2"></i>Explore Roster
                 </a>
                 <a
                   href="about.html"
-                  class="btn border-warriors-navy text-warriors-navy px-6 py-3 rounded-full hover:bg-warriors-navy hover:text-white transition-all"
+                  class="btn bg-gold text-white px-6 py-3 rounded-full hover:scale-105 transition-transform"
                 >
                   <i class="fas fa-info-circle mr-2"></i>Our Story
                 </a>
@@ -146,7 +146,7 @@
                   <div>
                     <h3
                       class="text-4xl font-bold text-warriors-navy counter"
-                      data-target="12"
+                      data-target="23"
                     >
                       0
                     </h3>
@@ -155,7 +155,7 @@
                   <div>
                     <h3
                       class="text-4xl font-bold text-warriors-navy counter"
-                      data-target="8"
+                      data-target="7"
                     >
                       0
                     </h3>
@@ -164,7 +164,7 @@
                   <div>
                     <h3
                       class="text-4xl font-bold text-warriors-navy counter"
-                      data-target="45"
+                      data-target="48"
                     >
                       0
                     </h3>
@@ -186,25 +186,9 @@
           <p class="text-lg text-gray-700 mb-12">
             Uncover the heart of the Warriors' success
           </p>
-          <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div
-              class="card bg-white shadow-xl rounded-2xl p-6 transform hover:scale-105 transition-all"
-            >
-              <div
-                class="bg-gold rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4"
-              >
-                <i class="fas fa-users text-warriors-navy text-3xl"></i>
-              </div>
-              <h3 class="text-xl font-bold text-warriors-navy">Our Roster</h3>
-              <p class="text-gray-600">
-                Meet the stars driving our success on the court.
-              </p>
-              <a
-                href="roster.html"
-                class="btn border-warriors-navy text-warriors-navy mt-4 rounded-full hover:bg-warriors-navy hover:text-white"
-                >View Roster</a
-              >
-            </div>
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 gap-8 justify-center md:justify-around"
+          >
             <div
               class="card bg-white shadow-xl rounded-2xl p-6 transform hover:scale-105 transition-all"
             >
@@ -217,28 +201,29 @@
               <p class="text-gray-600">Explore our journey to NBA dominance.</p>
               <a
                 href="about.html"
-                class="btn border-warriors-navy text-warriors-navy mt-4 rounded-full hover:bg-warriors-navy hover:text-white"
-                >Learn More</a
+                class="btn border-warriors-navy text-warriors-navy px-6 py-2 mt-4 rounded-full hover:bg-warriors-navy hover:text-white"
               >
+                Learn More
+              </a>
             </div>
+          <div
+            class="card bg-white shadow-xl rounded-2xl p-6 transform hover:scale-105 transition-all"
+          >
             <div
-              class="card bg-white shadow-xl rounded-2xl p-6 transform hover:scale-105 transition-all"
+              class="bg-gold rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4"
             >
-              <div
-                class="bg-gold rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4"
-              >
-                <i class="fas fa-calendar-alt text-warriors-navy text-3xl"></i>
-              </div>
-              <h3 class="text-xl font-bold text-warriors-navy">
-                Game Schedule
-              </h3>
-              <p class="text-gray-600">Join us for thrilling NBA action.</p>
-              <a
-                href="#"
-                class="btn border-warriors-navy text-warriors-navy mt-4 rounded-full hover:bg-warriors-navy hover:text-white"
-                >View Schedule</a
-              >
+              <i class="fas fa-users text-warriors-navy text-3xl"></i>
             </div>
+            <h3 class="text-xl font-bold text-warriors-navy">Our Roster</h3>
+            <p class="text-gray-600">
+              Meet the stars driving our success on the court.
+            </p>
+            <a
+              href="roster.html"
+              class="btn border-warriors-navy text-warriors-navy px-6 py-2 mt-4 rounded-full hover:bg-warriors-navy hover:text-white"
+            >
+              View Roster
+            </a>
           </div>
         </div>
       </section>
@@ -291,21 +276,23 @@
                   class="card-flip-front bg-white shadow-xl rounded-2xl overflow-hidden"
                 >
                   <img
-                    src="https://cdn.nba.com/headshots/nba/latest/1040x760/202691.png"
-                    alt="Klay Thompson"
+                    src="https://cdn.nba.com/headshots/nba/latest/1040x760/1630228.png"
+                    alt="Jonathan Kuminga"
                     class="w-full h-64 object-cover"
                   />
                   <div class="p-4 text-center">
-                    <h4 class="font-bold text-warriors-navy">Klay Thompson</h4>
-                    <p class="text-gray-600">Shooting Guard</p>
+                    <h4 class="font-bold text-warriors-navy">
+                      Jonathan Kuminga
+                    </h4>
+                    <p class="text-gray-600">Small Forward</p>
                   </div>
                 </div>
                 <div
                   class="card-flip-back bg-warriors-navy text-white p-4 flex items-center justify-center"
                 >
                   <div class="text-center">
-                    <h4 class="font-bold">Klay Thompson</h4>
-                    <p>Splash Brother</p>
+                    <h4 class="font-bold">Jonathan Kuminga</h4>
+                    <p>Athletic Force</p>
                     <a
                       href="roster.html"
                       class="btn border-gold text-gold mt-2 rounded-full hover:bg-gold hover:text-warriors-navy"
